[metadata]
name = hello-world
author = Yoan Blanc
author_email = yoan@dosimple.ch
description-file = README.md
description-content-type = text/x-markdown; charset=UTF-8
license = MIT
homepage = https://github.com/greut/pipenv-to-wheel

[files]
packages =
    hello_world

[pbr]
skip_git_sdist = true
skip_changelog = true
skip_authors = true
skip_reno = true
